src/test/ui/treat-err-as-bug/err.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/err.rs:10:21
   |
LL | pub static C: u32 = 0 - 1;
   |                     ^^^^^ attempt to compute `0_u32 - 1_u32`, which would overflow

error: internal compiler error: unexpected panic

query stack during panic:
#0 [eval_to_allocation_raw] const-evaluating + checking `C`
#1 [eval_to_allocation_raw] const-evaluating + checking `C`
end of query stack
